--- a/app/inicio.html
+++ b/app/inicio.html
@@ -12,7 +12,7 @@
 <h3>Villain - Stella Jang</h3>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/R-kWrXyIe4k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-<a href="0.0.0.0:80">Personaje</a>
+<a href=":80">Personaje</a>
 
 </body>
 </html>
