--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 <h1 style="background-color:DodgerBlue;">Chu Wanning</h1>
 <p style="background-color:Tomato;">That man was slender in form and elegant in appearance with the aura of transcendent holiness, a face crafted with handsome beauty. [...] his expression was sharp like the blade, his phoenix eyes slanted upwards, his nose sleek and thin, the very appearance of sophistication and refined manners but with harshness in his eyes, looking particularly distant and cold</p>
 <img src="wanning.jpg" alt="2ha MC">
-<a href="0.0.0.0:8080">Musica</a>
+<a href=":8080">Musica</a>
 
 </body>
 </html>
