--- a/app/index.html
+++ b/app/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Personaje</title>
+<title>Musica</title>
 </head>
 <body>
 
-<h1 style="background-color:DodgerBlue;">Chu Wanning</h1>
-<p style="background-color:Tomato;">That man was slender in form and elegant in appearance with the aura of transcendent holiness, a face crafted with handsome beauty. [...] his expression was sharp like the blade, his phoenix eyes slanted upwards, his nose sleek and thin, the very appearance of sophistication and refined manners but with harshness in his eyes, looking particularly distant and cold</p>
-<img src="wanning.jpg" alt="2ha MC">
-<a href=":8080">Musica</a>
+<h1 style="background-color:yellow;">Musica</h1>
+<p>Pagina donde simplemente pongo un montón de musica</p>
+
+<h3>MAZE - Kikuohana</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/wnQf_5k2CUc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<h3>Villain - Stella Jang</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/R-kWrXyIe4k" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<h3>BewhY - Side by Side</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/iym0OXC8XmY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<h3>All that jazz</h3>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/va8VDBGcKS4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 </body>
 </html>
